dist: update package descriptions
* RPM groups for documentation packages should be Documentation,
  not inherit Development/Languages/Python.
* Resolve grammar issues relating to missing "the" words.
* Replace some silly-looking descriptions that contain multiple
  chained prepositions ("documentation for library for ...")
* Throw out pointless dot-on-a-single-line. (/\n\.\n/ matches)

--- a/openstack/Bareon/Bareon.spec.j2
+++ b/openstack/Bareon/Bareon.spec.j2
@@ -70,6 +70,7 @@ data, download operating system images and put these images on partitions.
 
 %package doc
 Summary:        Documentation for OpenStack bareon
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
