--- a/openstack/Tempest/Tempest.spec.j2
+++ b/openstack/Tempest/Tempest.spec.j2
@@ -65,6 +65,7 @@ deployment.
 
 %package doc
 Summary:        Documentation for the OpenStack Integration Test Suite
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
