--- a/openstack/cliff/cliff.spec.j2
+++ b/openstack/cliff/cliff.spec.j2
@@ -36,7 +36,7 @@ setuptools entry points to provide subcommands, output formatters, and
 other extensions.
 
 %package doc
-Summary:        %{summary} - Documentation
+Summary:        Documentation for the Command Line Interface Formulation Framework
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
