--- a/openstack/debtcollector/debtcollector.spec.j2
+++ b/openstack/debtcollector/debtcollector.spec.j2
@@ -35,7 +35,7 @@ future deprecations.
 
 %package doc
 Summary:        Documentation for %{name}
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
