--- a/openstack/glance_store/glance_store.spec.j2
+++ b/openstack/glance_store/glance_store.spec.j2
@@ -60,8 +60,8 @@ BuildArch:      noarch
 Glance store library.
 
 %package doc
-Summary:        Documentation for OpenStack Image Service Store Library
-Group:          Documentation
+Summary:        Documentation for the OpenStack Image Service Store library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
