--- a/openstack/gnocchiclient/gnocchiclient.spec.j2
+++ b/openstack/gnocchiclient/gnocchiclient.spec.j2
@@ -42,8 +42,8 @@ This is a client library for Gnocchi built on the Gnocchi API. It
 provides a Python API (the gnocchiclient module) and a command-line tool.
 
 %package doc
-Summary:        Documentation for OpenStack Gnocchi API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Gnocchi API client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
