--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -48,6 +48,7 @@ Tools for authenticating to an OpenStack-based cloud. These tools include:
 
 %package doc
 Summary:        Documentation for OpenStack authenticating tools
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
