--- a/openstack/masakari-monitors/masakari-monitors.spec.j2
+++ b/openstack/masakari-monitors/masakari-monitors.spec.j2
@@ -65,7 +65,8 @@ System package - %{name}
 Python package - %{python_pkg}
 
 %package        doc
-Summary:        Documentation for OpenStack Masakari Service
+Summary:        Documentation for the OpenStack Masakari service
+Group:          Documentation/HTML
 BuildRequires:  git
 BuildRequires:  {{ py2pkg('Tempest') }}
 BuildRequires:  {{ py2pkg('Sphinx') }}
