--- a/openstack/microversion_parse/microversion_parse.spec.j2
+++ b/openstack/microversion_parse/microversion_parse.spec.j2
@@ -19,11 +19,12 @@ A simple parser for OpenStack microversion headers.
 
 %package doc
 Summary:        Documentation for OpenStack Microversion headers
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
 %description doc
-This package contains thedocumentation for OpenStack microversion
+This package contains the documentation for OpenStack microversion
 headers parsing library.
 
 %prep
