--- a/openstack/openstack-macros/openstack-macros.spec.j2
+++ b/openstack/openstack-macros/openstack-macros.spec.j2
@@ -4,9 +4,9 @@
 Name:           openstack-macros
 Version:        2018.1.0
 Release:        0
-Summary:        OpenStack Packaging - RPM Macros
+Summary:        RPM macros for OpenStack packaging
 License:        {{ license('Apache-2.0') }}
-Group:          Development/Libraries/Python
+Group:          Development/Tools/Other
 Url:            https://wiki.openstack.org/wiki/Rpm-packaging
 Source0:        macros.openstack-common
 Source1:        macros.openstack-suse
