--- a/openstack/openstacksdk/openstacksdk.spec.j2
+++ b/openstack/openstacksdk/openstacksdk.spec.j2
@@ -41,7 +41,7 @@ provide a consistent and complete set of interactions with OpenStack's
 many services, along with complete documentation, examples, and tools.
 
 %package doc
-Summary:        %{summary} - Documentation
+Summary:        Documentation for the OpenStack SDK
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('keystoneauth1') }}
