--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -42,7 +42,8 @@ you don't have to know extra info to use OpenStack.
 
 %if %{with docs}
 %package doc
-Summary:        Documentation for OpenStack client configuration library
+Summary:        Documentation for the OpenStack client configuration library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('reno') }}
