--- a/openstack/os-service-types/os-service-types.spec.j2
+++ b/openstack/os-service-types/os-service-types.spec.j2
@@ -28,7 +28,8 @@ version of the data to use in case network access is for some reason not
 possible and local caching of the fetched data.
 
 %package doc
-Summary:        Documentation for OpenStack os-service-types library
+Summary:        Documentation for the OpenStack os-service-types library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
