--- a/openstack/os-testr/os-testr.spec.j2
+++ b/openstack/os-testr/os-testr.spec.j2
@@ -28,8 +28,8 @@ A testr wrapper to provide functionality for OpenStack projects
 * Bugs: http://bugs.launchpad.net/os-testr
 
 %package doc
-Summary:        Documentation for the testr
-Group:          Documentation
+Summary:        Documentation for the testr wrapper
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
