--- a/openstack/os-traits/os-traits.spec.j2
+++ b/openstack/os-traits/os-traits.spec.j2
@@ -30,8 +30,8 @@ OpenStack community to refer to a particular hardware, virtualization, storage,
 network, or device trait.
 
 %package doc
-Summary:        Documentation for OpenStack traits Library
-Group:          Documentation
+Summary:        Documentation for the OpenStack traits library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
