--- a/openstack/os-xenapi/os-xenapi.spec.j2
+++ b/openstack/os-xenapi/os-xenapi.spec.j2
@@ -38,7 +38,8 @@ BuildArch:      noarch
 XenAPI library for OpenStack projects.
 
 %package doc
-Summary:        Documentation for OpenStack log library
+Summary:        Documentation for the OpenStack XenAPI library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
