--- a/openstack/osc-lib/osc-lib.spec.j2
+++ b/openstack/osc-lib/osc-lib.spec.j2
@@ -46,6 +46,7 @@ is a package of common support modules for writing OSC plugins.
 
 %package doc
 Summary:        Documentation for the OpenStack client library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
