--- a/openstack/oslo.cache/oslo.cache.spec.j2
+++ b/openstack/oslo.cache/oslo.cache.spec.j2
@@ -37,6 +37,7 @@ backends such as Memcached.
 
 %package doc
 Summary:        Documentation for the OpenStack Oslo Cache library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
