--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -39,7 +39,8 @@ multi-process applications using locking mechanisms and for running
 external processes.
 
 %package doc
-Summary:        Documentation for OpenStack concurrency library
+Summary:        Documentation for the OpenStack concurrency library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
