--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -44,7 +44,8 @@ The oslo-config library is a command line and configuration file
 parsing library from the Oslo project.
 
 %package doc
-Summary:       Documentation for OpenStack common configuration library
+Summary:        Documentation for the OpenStack common configuration library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
