--- a/openstack/oslo.i18n/oslo.i18n.spec.j2
+++ b/openstack/oslo.i18n/oslo.i18n.spec.j2
@@ -23,7 +23,8 @@ The oslo.i18n library contain utilities for working with internationalization
 or library.
 
 %package doc
-Summary:        Documentation for OpenStack i18n library
+Summary:        Documentation for the OpenStack i18n library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
