--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -43,7 +43,8 @@ for all openstack projects.It also provides custom formatters, handlers and
 support for context specific logging (like resource id's etc).
 
 %package doc
-Summary:        Documentation for OpenStack log library
+Summary:        Documentation for the OpenStack log library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
