--- a/openstack/oslo.messaging/oslo.messaging.spec.j2
+++ b/openstack/oslo.messaging/oslo.messaging.spec.j2
@@ -74,7 +74,8 @@ The Oslo messaging API supports RPC and notifications over a number
 of different messaging transports.
 
 %package doc
-Summary:        Documentation for OpenStack messaging library
+Summary:        Documentation for the OpenStack messaging library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
