--- a/openstack/oslo.middleware/oslo.middleware.spec.j2
+++ b/openstack/oslo.middleware/oslo.middleware.spec.j2
@@ -43,7 +43,8 @@ with functionality like add/delete/modification of http headers and support
 for limiting size/connection etc.
 
 %package doc
-Summary:        Documentation for OpenStack middleware library
+Summary:        Documentation for the OpenStack middleware library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
