--- a/openstack/oslo.reports/oslo.reports.spec.j2
+++ b/openstack/oslo.reports/oslo.reports.spec.j2
@@ -33,7 +33,8 @@ The project oslo.reports hosts a general purpose error report generation
 framework, known as the "guru meditation report".
 
 %package doc
-Summary:        Documentation for OpenStack reports library
+Summary:        Documentation for the OpenStack reports library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
