--- a/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
+++ b/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
@@ -33,6 +33,7 @@ from OpenStack services.
 
 %package doc
 Summary:        Documentation for OpenStack %{sname}
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
