--- a/openstack/oslo.service/oslo.service.spec.j2
+++ b/openstack/oslo.service/oslo.service.spec.j2
@@ -49,7 +49,8 @@ utilities long-running applications might need for working with SSL or WSGI,
 performing periodic operations, interacting with systemd, etc.
 
 %package doc
-Summary:        Documentation for OpenStack service library
+Summary:        Documentation for the OpenStack service library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
