--- a/openstack/oslo.utils/oslo.utils.spec.j2
+++ b/openstack/oslo.utils/oslo.utils.spec.j2
@@ -40,7 +40,8 @@ The oslo.utils library provides support for common utility type functions,
 such as encoding, exception handling, string manipulation, and time handling.
 
 %package doc
-Summary:        Documentation for OpenStack utils library
+Summary:        Documentation for the OpenStack utils library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
