--- a/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
+++ b/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
@@ -45,7 +45,7 @@ used in RPC APIs, to ensure upgrades happen without spreading version dependent
 code across different services and projects.
 
 %package doc
-Summary:        osloversionedobjects library - Documentation
+Summary:        Documentation for the osloversionedobjects library
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
