--- a/openstack/oslo.vmware/oslo.vmware.spec.j2
+++ b/openstack/oslo.vmware/oslo.vmware.spec.j2
@@ -51,7 +51,8 @@ The Oslo VMware library offers session and API call management for VMware ESX/VC
 server.
 
 %package        doc
-Summary:        Documentation for OpenStack common VMware library
+Summary:        Documentation for the OpenStack common VMware library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 Requires:       %{name} = %{version}
