--- a/openstack/osprofiler/osprofiler.spec.j2
+++ b/openstack/osprofiler/osprofiler.spec.j2
@@ -42,6 +42,7 @@ reasons (for example in isolating cross-project performance issues).
 
 %package doc
 Summary:        Documentation for OSProfiler
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
