--- a/openstack/ovsdbapp/ovsdbapp.spec.j2
+++ b/openstack/ovsdbapp/ovsdbapp.spec.j2
@@ -31,7 +31,8 @@ Open_vSwitchs OVSDB protocol (https://tools.ietf.org/html/rfc7047). It wraps
 the Python 'ovs' and adds an event loop and friendly transactions.
 
 %package doc
-Summary:        Documentation for OpenStack log library
+Summary:        Documentation for the OpenStack log library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
