--- a/openstack/pbr/pbr.spec.j2
+++ b/openstack/pbr/pbr.spec.j2
@@ -28,7 +28,8 @@ different projects each with at least 3 active branches, it seems like a good
 time to make that code into a proper re-usable library.
 
 %package doc
-Summary:        Documentation for the PBR
+Summary:        Documentation for python-pbr
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
