--- a/openstack/pycadf/pycadf.spec.j2
+++ b/openstack/pycadf/pycadf.spec.j2
@@ -28,6 +28,7 @@ DMTF Cloud Audit (CADF) data model
 
 %package doc
 Summary:        Documentation for the DMTF Cloud Audit (CADF) data model
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
