--- a/openstack/pyghmi/pyghmi.spec.j2
+++ b/openstack/pyghmi/pyghmi.spec.j2
@@ -24,8 +24,8 @@ pyghmicons and pyghmiutil are example scripts to show how one may incorporate
 this library into python code
 
 %package doc
-Summary:        General Hardware Management Initiative (IPMI and others) -- Documentation
-Group:          Documentation
+Summary:        Documentation for the General Hardware Management Initiative (IPMI and others)
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
