--- a/openstack/python-barbicanclient/python-barbicanclient.spec.j2
+++ b/openstack/python-barbicanclient/python-barbicanclient.spec.j2
@@ -40,8 +40,8 @@ command-line script (barbican).
 This package contains the Python 2.x module.
 
 %package doc
-Summary:        Documentation for OpenStack Key Management API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Key Management API Client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
