--- a/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
+++ b/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
@@ -42,8 +42,8 @@ provides a Python API (the ceilometerclient module) and a command-line tool
 (ceilometer).
 
 %package doc
-Summary:        Documentation for OpenStack Ceilometer API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Ceilometer API Client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
