--- a/openstack/python-congressclient/python-congressclient.spec.j2
+++ b/openstack/python-congressclient/python-congressclient.spec.j2
@@ -47,8 +47,8 @@ state abides by the cloud operator's policies. Congress
 is designed to work with any policy and any cloud service.
 
 %package doc
-Summary:        Documentation for OpenStack Congress API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack Congress API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
