--- a/openstack/python-freezerclient/python-freezerclient.spec.j2
+++ b/openstack/python-freezerclient/python-freezerclient.spec.j2
@@ -36,8 +36,8 @@ Client library for Freezer built on the Freezer API. It provides a Python API
 (the freezerclient module) and a command-line tool (freezer).
 
 %package doc
-Summary:        Documentation for OpenStack Freezer API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack Freezer API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
