--- a/openstack/python-glanceclient/python-glanceclient.spec.j2
+++ b/openstack/python-glanceclient/python-glanceclient.spec.j2
@@ -43,8 +43,8 @@ glanceclient module), and a command-line script (glance). Each implements
 100% of the OpenStack Glance API.
 
 %package doc
-Summary:        Documentation for OpenStack Glance API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Glance API Client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
