--- a/openstack/python-glareclient/python-glareclient.spec.j2
+++ b/openstack/python-glareclient/python-glareclient.spec.j2
@@ -38,8 +38,8 @@ BuildArch:      noarch
 Python bindings to the Glare Artifact Repository
 
 %package doc
-Summary:        Documentation for OpenStack Glare API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Glare API Client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
