--- a/openstack/python-heatclient/python-heatclient.spec.j2
+++ b/openstack/python-heatclient/python-heatclient.spec.j2
@@ -44,8 +44,8 @@ heatclient module), and a command-line script (heat). Each implements 100% of
 the OpenStack Heat API.
 
 %package doc
-Summary:        Documentation for OpenStack Heat API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Heat API Client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
