--- a/openstack/python-k8sclient/python-k8sclient.spec.j2
+++ b/openstack/python-k8sclient/python-k8sclient.spec.j2
@@ -27,8 +27,8 @@ Client library for K8s built on the K8s API. It provides a Python API
 (the k8sclient module) and a command-line tool (k8s).
 
 %package doc
-Summary:        Documentation for OpenStack K8s API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack K8s API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
