--- a/openstack/python-karborclient/python-karborclient.spec.j2
+++ b/openstack/python-karborclient/python-karborclient.spec.j2
@@ -46,8 +46,8 @@ This is a client for the OpenStack Karbor API. It provides a Python API (the
 karborclient module) and a command-line interface (Karbor).
 
 %package doc
-Summary:        Documentation for OpenStack Karbor API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Karbor API Client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
