--- a/openstack/python-keystoneclient/python-keystoneclient.spec.j2
+++ b/openstack/python-keystoneclient/python-keystoneclient.spec.j2
@@ -43,8 +43,8 @@ BuildArch:      noarch
 Client library for interacting with Openstack Identity API.
 
 %package doc
-Summary:        Documentation for OpenStack Identity API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Identity API Client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
