--- a/openstack/python-magnumclient/python-magnumclient.spec.j2
+++ b/openstack/python-magnumclient/python-magnumclient.spec.j2
@@ -50,8 +50,8 @@ Client library for Magnum built on the Magnum API. It provides a Python API
 (the magnumclient module) and a command-line tool (magnum).
 
 %package doc
-Summary:        Documentation for OpenStack Magnum API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack Magnum API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
