--- a/openstack/python-manilaclient/python-manilaclient.spec.j2
+++ b/openstack/python-manilaclient/python-manilaclient.spec.j2
@@ -34,8 +34,8 @@ Client library and command line utility for interacting with Openstack
 Share API.
 
 %package doc
-Summary:        Documentation for OpenStack Share API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Share API Client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
