--- a/openstack/python-masakariclient/python-masakariclient.spec.j2
+++ b/openstack/python-masakariclient/python-masakariclient.spec.j2
@@ -34,7 +34,7 @@ Client library for Masakari built on the Masakari API. It provides a Python API
 (the masakariclient module) and a command-line tool (masakari).
 
 %package doc
-Summary:        Documentation for OpenStack Masakari API client libary
+Summary:        Documentation for the OpenStack Masakari API client libary
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
