--- a/openstack/python-neutronclient/python-neutronclient.spec.j2
+++ b/openstack/python-neutronclient/python-neutronclient.spec.j2
@@ -53,8 +53,8 @@ Client library and command line utility for interacting with OpenStack
 Neutron's API.
 
 %package doc
-Summary:        Documentation for OpenStack Neutron API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Neutron API client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
