--- a/openstack/python-novaclient/python-novaclient.spec.j2
+++ b/openstack/python-novaclient/python-novaclient.spec.j2
@@ -44,8 +44,8 @@ novaclient module), and a command-line script (nova). Each implements 100% of
 the OpenStack Nova API.
 
 %package doc
-Summary:        Documentation for OpenStack Nova API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Nova API client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
