--- a/openstack/python-oneviewclient/python-oneviewclient.spec.j2
+++ b/openstack/python-oneviewclient/python-oneviewclient.spec.j2
@@ -28,8 +28,8 @@ Client library for Oneview built on the Oneview API. It provides a Python API
 (the oneviewclient module) and a command-line tool (oneview).
 
 %package doc
-Summary:        Documentation for OpenStack Oneview API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack Oneview API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
