--- a/openstack/python-openstackclient/python-openstackclient.spec.j2
+++ b/openstack/python-openstackclient/python-openstackclient.spec.j2
@@ -48,8 +48,8 @@ It is a thin wrapper to the stock python-*client modules that implement the
 actual REST API client actions.
 
 %package doc
-Summary:        Documentation for OpenStack Command-line Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack command-line client
+Group:          Documentation/HTML
 # Some clients are commented out, since they have not been built yet
 # TODO(jpena): uncomment them to enable their sections in the documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
