--- a/openstack/python-saharaclient/python-saharaclient.spec.j2
+++ b/openstack/python-saharaclient/python-saharaclient.spec.j2
@@ -41,8 +41,8 @@ BuildArch:      noarch
 Python client library for interacting with OpenStack Sahara API.
 
 %package doc
-Summary:        Documentation for Client library for OpenStack Sahara API
-Group:          Documentation
+Summary:        Documentation for the OpenStack Sahara API client library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
