--- a/openstack/python-scciclient/python-scciclient.spec.j2
+++ b/openstack/python-scciclient/python-scciclient.spec.j2
@@ -28,8 +28,8 @@ Client library for Scci built on the Scci API. It provides a Python API
 (the scciclient module) and a command-line tool (scci).
 
 %package doc
-Summary:        Documentation for OpenStack Scci API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack Scci API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
