--- a/openstack/python-tackerclient/python-tackerclient.spec.j2
+++ b/openstack/python-tackerclient/python-tackerclient.spec.j2
@@ -39,8 +39,8 @@ BuildArch:      noarch
 OpenStack tacker client
 
 %package doc
-Summary:        Documentation for OpenStack tacker client
-Group:          Documentation
+Summary:        Documentation for the OpenStack tacker client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('reno') }}
