--- a/openstack/python-tripleoclient/python-tripleoclient.spec.j2
+++ b/openstack/python-tripleoclient/python-tripleoclient.spec.j2
@@ -43,8 +43,8 @@ python-tripleoclient is a Python plugin to OpenstackClient
 for TripleO.
 
 %package doc
-Summary:        Documentation for OpenstackClient plugin for tripleoclient
-Group:          Documentation
+Summary:        Documentation for the OpenstackClient plugin for tripleoclient
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
