--- a/openstack/python-troveclient/python-troveclient.spec.j2
+++ b/openstack/python-troveclient/python-troveclient.spec.j2
@@ -45,8 +45,8 @@ troveclient module), and a command-line script (trove). Each
 implements 100% (or less ;) ) of the Trove API.
 
 %package doc
-Summary:        Documentation for OpenStack DBaaS API.
-Group:          Documentation
+Summary:        Documentation for the OpenStack DBaaS API
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
