--- a/openstack/python-watcherclient/python-watcherclient.spec.j2
+++ b/openstack/python-watcherclient/python-watcherclient.spec.j2
@@ -42,8 +42,8 @@ Client library for Watcher built on the Watcher API. It provides a Python API
 (the watcherclient module) and a command-line tool (watcher).
 
 %package doc
-Summary:        Documentation for OpenStack Watcher API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack Watcher API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
