--- a/openstack/python-zaqarclient/python-zaqarclient.spec.j2
+++ b/openstack/python-zaqarclient/python-zaqarclient.spec.j2
@@ -44,8 +44,8 @@ BuildArch:      noarch
 Python client to Zaqar Queueing API.
 
 %package doc
-Summary:        Documentation for OpenStack Zaqar Queueing API
-Group:          Documentation
+Summary:        Documentation for the OpenStack Zaqar Queueing API
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
