--- a/openstack/stevedore/stevedore.spec.j2
+++ b/openstack/stevedore/stevedore.spec.j2
@@ -33,7 +33,7 @@ dynamically loaded extensions.
 
 %package doc
 Summary:        Documentation for %{name}
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 
 %description doc
