--- a/openstack/tripleo-common/tripleo-common.spec.j2
+++ b/openstack/tripleo-common/tripleo-common.spec.j2
@@ -54,8 +54,8 @@ BuildArch:      noarch
 Python library for code used by TripleO projects.
 
 %package doc
-Summary:        Documentation for Python library for code used by TripleO projects
-Group:          Documentation
+Summary:        Documentation for tripleo-common
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
