--- a/openstack/aodhclient/aodhclient.spec.j2
+++ b/openstack/aodhclient/aodhclient.spec.j2
@@ -38,8 +38,8 @@ This is a client library for Aodh built on the Aodh API. It
 provides a Python API (the aodhclient module) and a command-line tool.
 
 %package doc
-Summary:        Documentation for OpenStack Aodh API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Aodh API client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
