--- a/openstack/os-brick/os-brick.spec.j2
+++ b/openstack/os-brick/os-brick.spec.j2
@@ -56,15 +56,13 @@ Features:
 - Removal of volumes from a host.
 
 %package doc
-Summary:        Documentation for OpenStack os-brick library
+Summary:        Documentation for the OpenStack os-brick library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
 %description doc
 OpenStack Cinder brick library for managing local volume attaches.
-Features:
-- Discovery of volumes being attached to a host for many transport protocols.
-- Removal of volumes from a host.
 This package contains the documentation.
 
 %prep
