--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -26,8 +26,8 @@ The request context is usually populated in the WSGI pipeline and
 used by various modules such as logging.
 
 %package doc
-Summary:        Documentation for OpenStack common context library
-Group:          Documentation
+Summary:        Documentation for the OpenStack common context library
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
