--- a/openstack/python-cloudkittyclient/python-cloudkittyclient.spec.j2
+++ b/openstack/python-cloudkittyclient/python-cloudkittyclient.spec.j2
@@ -38,8 +38,8 @@ This is a client library for CloudKitty built on the CloudKitty API.
 It provides a Python API (the cloudkittyclient module).
 
 %package doc
-Summary:        Documentation for OpenStack Cloudkitty API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack Cloudkitty API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
