--- a/openstack/python-dracclient/python-dracclient.spec.j2
+++ b/openstack/python-dracclient/python-dracclient.spec.j2
@@ -25,8 +25,8 @@ BuildArch:      noarch
 Library for managing machines with Dell iDRAC cards.
 
 %package doc
-Summary:        Documentation for OpenStack Drac API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Drac API Client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('reno') }}
