--- a/openstack/python-muranoclient/python-muranoclient.spec.j2
+++ b/openstack/python-muranoclient/python-muranoclient.spec.j2
@@ -50,8 +50,8 @@ Client library for Murano built on the Murano API. It provides a Python API
 (the muranoclient module) and a command-line tool (murano).
 
 %package doc
-Summary:        Documentation for OpenStack Magnum API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack Magnum API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
