--- a/openstack/python-senlinclient/python-senlinclient.spec.j2
+++ b/openstack/python-senlinclient/python-senlinclient.spec.j2
@@ -54,8 +54,8 @@ This is a client for the OpenStack Senlin API. It provides a Python API (the
 senlinclient module) and a command-line interface (senlin).
 
 %package doc
-Summary:        Documentation for OpenStack Senlin API Client
-Group:          Documentation
+Summary:        Documentation for the OpenStack Senlin API client
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
