--- a/openstack/python-solumclient/python-solumclient.spec.j2
+++ b/openstack/python-solumclient/python-solumclient.spec.j2
@@ -49,8 +49,8 @@ Client library for Solum built on the Solum API. It provides a Python API
 (the solumclient module) and a command-line tool (solum).
 
 %package doc
-Summary:        Documentation for OpenStack Solum API client libary
-Group:          Documentation
+Summary:        Documentation for the OpenStack Solum API client libary
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
