--- a/openstack/python-swiftclient/python-swiftclient.spec.j2
+++ b/openstack/python-swiftclient/python-swiftclient.spec.j2
@@ -25,7 +25,7 @@ This is a python client for the Swift API. There's a Python API (the
 swiftclient module), and a command-line script (swift).
 
 %package doc
-Summary:        %{summary} - Documentation
+Summary:        Documentation for the OpenStack Object Storage API client
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('futures') }}
