--- a/openstack/renderspec/renderspec.spec.j2
+++ b/openstack/renderspec/renderspec.spec.j2
@@ -24,6 +24,7 @@ and follow their policies and processes.
 
 %package doc
 Summary:        Documentation for the renderspec utility
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 Requires:       %{name} = %{version}
